tests/NormalTests/paczka1/fuzzy1/49208029.err
Error in line 2: VD2gfdBdwj S584 77,6
Error in line 4: mxlnaNu2PJw S584 87,4
Error in line 12: GArSk S231 71,18
Error in line 7: S698 S584 82,7
Error in line 14: S698 S698 13,8
Error in line 23: VD2gfdBdwj S584 8,7
Error in line 26: GArSk S231 286,27
Error in line 25: VD2gfdBdwj A595 78,3
